--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+efl (1.18.2-1) experimental; urgency=medium
+
+  * Team upload.
+  * New upstream version
+  * Bump all eo symbol versions for 1.18.2 release
+  * Fix missing eina, eo, eolian, emile, elocation static libraries
+
+ -- Ross Vandegrift <ross@kallisti.us>  Sun, 23 Oct 2016 10:45:50 -0400
+
 efl (1.18.1-3) experimental; urgency=medium
 
   * Team upload.
