--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+efl (1.18.2-1) experimental; urgency=medium
+
+  [ Ross Vandegrift ]
+  * Team upload.
+  * New upstream release.
+  * Bump all eo symbol versions for 1.18.2 release
+  * Fix missing eina, eo, eolian, emile, elocation static libraries
+  * debian/patches/70-gnutls3.4.diff: adopt the upstream fix
+  * Drop transitional libeina1 package
+  * Fix GL configure options on arm builds
+
+  [ Nicolas Braud-Santoni ]
+  * Use TLS-enabled, canonical links
+
+ -- Ross Vandegrift <ross@kallisti.us>  Fri, 25 Nov 2016 11:39:05 -0500
+
 efl (1.18.1-3) experimental; urgency=medium
 
   * Team upload.
